--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
     <title>CCC 2017 Archive</title>
-    <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         html, body {
             margin: 0;
